@@ -1,5 +1,12 @@
 2012-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* jtag3.c: Handle events returned by the ICE
+	* usbdevs.h: Add defines that mark an event in return
+	from usb_recv_frame().
+	* usb_libusb.c: (Dito.)
+
+2012-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* avrdude.conf.in: Remove "has_jtag" from Xmega A4 and D4
 	devices, as they only have PDI.
 	* jtag3.c (jtag3_page_erase): Actually implement this.
